# aoc2024

./: .gitignore  MODULE.bazel  p1.py  p1b.py
python/: BUILD.bazel  aoc.py  p1.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p17.py  p1b.py  p2.py  p3.py  p4.py  p5.py  p6.py  p7.py  p8.py  p9.py
